--- a/OpenFile/Info.plist
+++ b/OpenFile/Info.plist
@@ -4,6 +4,8 @@
 <dict>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
+	<key>SUPublicEDKey</key>
+	<string>mlAnWwD5PcINpVSLEZi/qImGtO2k7h5x/JAKwRgyDyA=</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIconFile</key>
